deploy/01_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nodejs-app
  labels:
    app: my-nodejs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-nodejs-app
  template:
    metadata:
      labels:
        app: my-nodejs-app
    spec:
      containers:
      - name: my-nodejs-app
        imagePullPolicy: Always
        image: gcr.io/stunning-chain-281818/argeualcantara/pipeline-service:latest
        ports:
        - containerPort: 8080
