deploy/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nodejs-service
spec:
  selector:
    app: my-nodejs-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
